updated path to navigate

--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
                             aria-current="page">Home</a>
                     </li>
                     <li>
-                        <a href="./product.html"
+                        <a href="./dist/product.html"
                             class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 hover:text-primary-hover md:p-0 ">Product</a>
                     </li>
                     <li>
-                        <a href="./about.html"
+                        <a href="./dist/about.html"
                             class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 hover:text-primary-hover md:p-0 ">About</a>
                     </li>
                     <li>
-                        <a href="./contact.html"
+                        <a href="./dist/contact.html"
                             class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 hover:text-primary-hover md:p-0 ">Contact</a>
                     </li>
                 </ul>
@@ -69,19 +69,19 @@
                     class="border-b z-20 w-screen bg-gray-100 border-gray-300 fixed top-[85px] left-[10px] sm:left-[20px] ">
                     <ul class="flex flex-col w-screen] justify-center gap-2  text-[18px] font-normal ">
                         <li class="w-[100%] ">
-                            <a href="#" class="block py-2 px-3 s text-on-primary bg-primary-color rounded   "
+                            <a href="index.html" class="block py-2 px-3 s text-on-primary bg-primary-color rounded   "
                                 aria-current="page">Home</a>
                         </li>
                         <li class="">
-                            <a href="./product.html"
+                            <a href="./dist/product.html"
                                 class="px-3 py-2 block text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 hover:text-primary-hover ">Product</a>
                         </li>
                         <li>
-                            <a href="./about.html"
+                            <a href="./dist/about.html"
                                 class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 hover:text-primary-hover ">About</a>
                         </li>
                         <li>
-                            <a href="./contact.html"
+                            <a href="./dist/contact.html"
                                 class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 hover:text-primary-hover ">Contact</a>
                         </li>
                         <li class="ml-3 my-2">
@@ -293,9 +293,8 @@
 
     <!-- link js tailwind -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
-    <script src="navbar.js"></script>
-    <script src="./script.js"></script>
-    <script src="./cart.js"></script>
+    <script src="./dist/script.js"></script>
+    <script src="./dist/cart.js"></script>  
 </body>
 
 </html>
