updated path in home page

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <!-- left -->
             <div
                 class="w-full md:w-1/2 h-[100%] flex justify-center items-center bg-gradient-to-t md:bg-gradient-to-t from-on-primary to-bb">
-                <img class="w-3/5 md:w-[70%] m-4" src="../Images/home/bp1.png" alt="">
+                <img class="w-3/5 md:w-[70%] m-4" src="./Images/home/bp1.png" alt="">
             </div>
 
             <!-- right -->
