third updated path

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <!-- logo -->
                 <div class="w-[10%] sm:w-[40%] flex justify-start ">
                     <a href="index.html">
-                        <img src="../Images/logo.png" class="w-[40px] flex" alt="">
+                        <img src="./Images/logo.png" class="w-[40px] flex" alt="">
                     </a>
                     <span class="hidden sm:flex ml-2 text-[26px] font-medium text-primary-color">Sokny <span
                             class="text-secondary-color ml-2">Store</span></span>
