remove dark mode in home

--- a/index.html
+++ b/index.html
@@ -160,14 +160,14 @@
 
 
     <!-- footer start -->
-    <footer class="bg-bb w-screen dark:bg-gray-900 flex justify-center">
+    <footer class="bg-bb w-screen flex justify-center">
         <div class="mx-auto h-full w-[90%] ">
             <div id="footer"
                 class="grid grid-cols-2 gap-8 px-4 py-6 lg:py-8 md:grid-cols-4 justify-center sm:justify-between ">
                 <div>
-                    <h2 class="mb-6 text-[20px] font-medium text-primary-color dark:text-white">Sokny <span
+                    <h2 class="mb-6 text-[20px] font-medium text-primary-color ">Sokny <span
                             class="text-secondary-color">Store</span></h2>
-                    <ul class="text-gray-500 dark:text-gray-400 font-medium">
+                    <ul class="text-gray-500 font-medium">
                         <li class="mb-4 text-gray-800 hover:text-primary-color">
                             <a href="./index.html" class=" hover:underline">Home</a>
                         </li>
@@ -184,8 +184,8 @@
                     </ul>
                 </div>
                 <div>
-                    <h2 class="mb-6 text-[20px] font-semibold text-gray-900 dark:text-white">Product</h2>
-                    <ul class="text-gray-500 dark:text-gray-400 font-medium">
+                    <h2 class="mb-6 text-[20px] font-semibold text-gray-900 ">Product</h2>
+                    <ul class="text-gray-500 font-medium">
                         <li class="mb-4 text-gray-800 hover:text-primary-color">
                             <a href="#" class=" hover:underline">Laptop</a>
                         </li>
@@ -201,8 +201,8 @@
                     </ul>
                 </div>
                 <div>
-                    <h2 class="mb-6 text-[20px] font-semibold text-gray-900 dark:text-white">Branch</h2>
-                    <ul class="text-gray-500 dark:text-gray-400 font-medium">
+                    <h2 class="mb-6 text-[20px] font-semibold text-gray-900 ">Branch</h2>
+                    <ul class="text-gray-500 font-medium">
                         <li class="mb-4 text-gray-800 hover:text-primary-color">
                             <a href="#" class=" hover:underline">Apple</a>
                         </li>
@@ -218,8 +218,8 @@
                     </ul>
                 </div>
                 <div>
-                    <h2 class="mb-6 text-[20px] font-semibold text-gray-900 dark:text-white">View Info.</h2>
-                    <ul class="text-gray-500 dark:text-gray-400 font-medium">
+                    <h2 class="mb-6 text-[20px] font-semibold text-gray-900">View Info.</h2>
+                    <ul class="text-gray-500 font-medium">
                         <li class="mb-4 text-gray-800 hover:text-primary-color">
                             <a href="#" class=" hover:underline"><i class="fa-brands fa-facebook mr-2"></i>Facebook</a>
                         </li>
@@ -236,12 +236,12 @@
                     </ul>
                 </div>
             </div>
-            <div class="px-4 py-6 bg-bb dark:bg-gray-700 md:flex md:items-center md:justify-between">
-                <span class="text-sm text-gray-800 dark:text-gray-300 sm:text-center">© 2023 <a
+            <div class="px-4 py-6 bg-bb md:flex md:items-center md:justify-between">
+                <span class="text-sm text-gray-800 sm:text-center">© 2023 <a
                         href="https://flowbite.com/">Sokny Store™</a>. All Rights Reserved.
                 </span>
                 <div class="flex mt-4 sm:justify-center md:mt-0 space-x-5 rtl:space-x-reverse">
-                    <a href="#" class="text-gray-400 hover:text-gray-900 dark:hover:text-white">
+                    <a href="#" class="text-gray-400 hover:text-gray-900 ">
                         <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
                             viewBox="0 0 8 19">
                             <path fill-rule="evenodd"
@@ -250,7 +250,7 @@
                         </svg>
                         <span class="sr-only">Facebook page</span>
                     </a>
-                    <a href="#" class="text-gray-400 hover:text-gray-900 dark:hover:text-white">
+                    <a href="#" class="text-gray-400 hover:text-gray-900">
                         <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
                             viewBox="0 0 21 16">
                             <path
@@ -258,7 +258,7 @@
                         </svg>
                         <span class="sr-only">Discord community</span>
                     </a>
-                    <a href="#" class="text-gray-400 hover:text-gray-900 dark:hover:text-white">
+                    <a href="#" class="text-gray-400 hover:text-gray-900 ">
                         <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
                             viewBox="0 0 20 17">
                             <path fill-rule="evenodd"
@@ -267,7 +267,7 @@
                         </svg>
                         <span class="sr-only">Twitter page</span>
                     </a>
-                    <a href="#" class="text-gray-400 hover:text-gray-900 dark:hover:text-white">
+                    <a href="#" class="text-gray-400 hover:text-gray-900">
                         <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
                             viewBox="0 0 20 20">
                             <path fill-rule="evenodd"
@@ -276,7 +276,7 @@
                         </svg>
                         <span class="sr-only">GitHub account</span>
                     </a>
-                    <a href="#" class="text-gray-400 hover:text-gray-900 dark:hover:text-white">
+                    <a href="#" class="text-gray-400 hover:text-gray-900 ">
                         <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
                             viewBox="0 0 20 20">
                             <path fill-rule="evenodd"
