updated path footer

--- a/index.html
+++ b/index.html
@@ -172,13 +172,13 @@
                             <a href="./index.html" class=" hover:underline">Home</a>
                         </li>
                         <li class="mb-4 text-gray-800 hover:text-primary-color">
-                            <a href="./product.html" class=" hover:underline">Product</a>
+                            <a href="./dist/product.html" class=" hover:underline">Product</a>
                         </li>
                         <li class="mb-4 text-gray-800 hover:text-primary-color">
-                            <a href="./about.html" class=" hover:underline">About</a>
+                            <a href="./dist/about.html" class=" hover:underline">About</a>
                         </li>
                         <li class="mb-4 text-gray-800 hover:text-primary-color">
-                            <a href="./contact.html" class=" hover:underline">Contact</a>
+                            <a href="./dist/contact.html" class=" hover:underline">Contact</a>
                         </li>
 
                     </ul>
